--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "author": "Iain Collins <me@iaincollins.com>",
   "contributors": [
@@ -18,6 +21,8 @@
     "Lluis Agusti <hi@llu.lu>"
   ],
   "dependencies": {
+    "@next/bundle-analyzer": "^12.2.3",
+    "cross-env": "^7.0.3",
     "next": "latest",
     "next-auth": "latest",
     "nodemailer": "^6",
